[project]
name = "wizvault"
version = "0.1.0"
description = "A personal collection of custom helper scripts, tools, and utilities. Go-to toolbox for streamlining coding tasks."
readme = "README.md"
requires-python = ">=3.09"
dependencies = []

[project.scripts]
wizvault = "wizvault.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["wizvault"]

